--- a/client/src/components/styles/VideogameCard.css
+++ b/client/src/components/styles/VideogameCard.css
@@ -1,27 +1,61 @@
+.videogame_cards{
+    padding: 1%;
+    margin: 2%;
+}
+
 .game_card{
     display: flex;
     flex-direction: column;
     color:white;
-    padding: 1%;
-    margin: 2%;
-    background: linear-gradient(to bottom, magenta, orange);
+    background-color:grey;
     border-radius: 10px;
     width: 300px;
-    align-items: center;
-    
     font-weight: bold;
+    border:3px solid black;
+}
+
+.card_details{
+    display: flex;
+    flex-direction: column;
+    background-color:  black;
+    border:15px solid black;
+    border-radius: 10px;
+    margin: 10px;
+    align-content: center;
 }
 
 .card_details img{
     width: 250px;
     height: auto;
+    
 }
 
 .card_details a{
     text-decoration: none;
     color: white;
-    text-align: center;
     font-size: 20px;
+    color: lime;
+}
+
+.genres{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.genres label{
+    padding: 3px;
+
+}
+
+.game_buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 10px;
+}
+
+.game_buttons img{
+    width: 50px;
 }
 
 
