--- a/client/src/components/styles/VideogameCreate.css
+++ b/client/src/components/styles/VideogameCreate.css
@@ -73,5 +73,8 @@
 }
 
 .create_message{
-    color: limegreen;
+    color: lime;
+    display: flex;
+    align-self: flex-start;
+    font-size: 40px;
 }
