--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -16,8 +16,7 @@
 
 
 .home_title{
-    padding-top: 10px;
-    padding-bottom: 10px;
+    
     background: linear-gradient(to bottom, magenta, orange);
     border-radius: 10px;
     border:3px white solid;
@@ -34,8 +33,8 @@
 .home_title p{
     display: flex;
     align-items:flex-start;
-    margin-left: 30px;
-
+    margin-left: 2%;
+    font-size: 15px;
 }
 
 .filter_order_options{
@@ -43,16 +42,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 15px;
-    
+    padding: 10px;
 }
 
 .filter_order_options div{
     font-size: 10px;
-    padding: 5px;
     border:3px white solid;
     border-radius: 10px;
     background: linear-gradient(to bottom, magenta, orange);
+    padding: 5px;
 }
 
 .filter_order_options select{
@@ -62,6 +60,7 @@
 }
 
 .loading{
+    
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -82,4 +81,46 @@
 .no_games img{
     width:350px;
     height: auto;
+}
+
+@media screen and (max-width:400px) {
+    .home_title h1{
+        font-size: 20px;
+    }
+
+    .home_title p{
+        font-size: 10px;
+    }
+
+    .filter_order_options{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .loading{
+    
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color:white;
+        font-size:20px;
+        padding: 2%;
+    }
+
+    .loading img{
+        width: fit-content;
+    }
+
+    .no_games{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color:white;
+        font-size: 20px;
+    }
+    
+    .no_games img{
+        width:fit-content;
+    }
 }
