--- a/client/src/components/styles/LandingPage.css
+++ b/client/src/components/styles/LandingPage.css
@@ -15,15 +15,16 @@
     
 }
 
-.landing_page h1{
-    font-size:50px;
+.landing_page p{
+    font-size:20px;
     font-family: pressStart;
-    
+    -webkit-text-stroke: 0.5px;
+    -webkit-text-stroke-color: magenta;
     color:white;
 }
 
 .landing_page button{
-    font-size: 60px;
+    font-size: 15px;
     background: linear-gradient(to bottom, magenta, yellow);
     border-radius: 15px;
     border-width: 10px;
@@ -33,12 +34,22 @@
 }
 
 .landing_page button:hover{
-    font-size: 60px;
-    background: linear-gradient(to bottom, blue,lime);
-    border-radius: 15px;
-    border-width: 10px;
+     background: linear-gradient(to bottom, blue,lime);
+    
     border-color: white;
     color: white;
+}
+
+@media screen and (max-width:400px) {
+    .landing_page p{
+        font-size: 15px;
+    }
+
+    .landing_page button{
+        font-size: 10px;
+        padding: 10px;
+        border-width: 5px;
+    }
 }
 
 
