--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -46,3 +46,27 @@
     font-size: 20px;
 }
 
+@media screen and (max-width:400px) {
+    .nav_bar{
+        padding: 1%;
+        display: flex;
+        flex-direction: column;
+        font-size: 10px;
+    }
+
+    .selected{
+        padding: 2%;
+    }
+
+    .links a{
+        padding-left: 0%;
+    }
+
+    .buscador{
+        padding: 0%;
+    }
+
+    
+    
+
+}
