--- a/client/src/components/styles/VideogameCard.css
+++ b/client/src/components/styles/VideogameCard.css
@@ -1,6 +1,5 @@
 .videogame_cards{
     padding: 1%;
-    margin: 2%;
 }
 
 .game_card{
@@ -9,7 +8,8 @@
     color:white;
     background-color:grey;
     border-radius: 10px;
-    width: 300px;
+    width: 270px;
+    height: 400px;
     font-weight: bold;
     border:3px solid black;
 }
@@ -18,21 +18,23 @@
     display: flex;
     flex-direction: column;
     background-color:  black;
-    border:15px solid black;
+    border:10px solid black;
+    height: 300px;
     border-radius: 10px;
     margin: 10px;
-    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
+
 .card_details img{
-    max-width: 250px;
-    max-height: 200px;
+    max-height:150px;
+    max-width: 200px;
 }
 
 .card_details a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
     color: lime;
 }
 
@@ -43,7 +45,8 @@
     align-items: flex-start;
 }
 
-.genres label{
+.card_details label{
+    font-size: 10px;
     padding: 3px;
 
 }
@@ -52,11 +55,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 10px;
+    margin: 5px;
 }
 
 .game_buttons img{
-    width: 50px;
+    width: 40px;
 }
 
 
