--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -1,5 +1,5 @@
 .home_page{
-    background-image: url("https://static.vecteezy.com/system/resources/thumbnails/002/015/090/small/retro-style-game-pattern-grid-background-free-video.jpg");
+    background-image: url(../../img/background.jpg);
     min-width: 100%;
     min-height: 100%;
     background-color: #480B7B;
