--- a/client/src/components/styles/VideogameDetail.css
+++ b/client/src/components/styles/VideogameDetail.css
@@ -1,5 +1,5 @@
 .details_container{
-    background-image: url("https://static.vecteezy.com/system/resources/thumbnails/002/015/090/small/retro-style-game-pattern-grid-background-free-video.jpg");
+    background-image: url(../../img/background.jpg);
     background-color: #480B7B;
     
     color: white;
