--- a/client/src/components/styles/VideogameCard.css
+++ b/client/src/components/styles/VideogameCard.css
@@ -32,10 +32,11 @@
     max-width: 200px;
 }
 
-.card_details a{
+.enter_game{
     text-decoration: none;
     color: white;
     color: lime;
+    -webkit-text-stroke: 0px;
 }
 
 .genres{
