--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -4,6 +4,9 @@
     min-height: 100%;
     background-color: #480B7B;
     font-family: pressStart;
+    color: white;
+    -webkit-text-stroke: 0.5px;
+    -webkit-text-stroke-color: magenta;
 }
 
 .home_options{
@@ -17,7 +20,7 @@
 
 .home_title{
     
-    background: linear-gradient(to bottom, magenta, orange);
+    background: linear-gradient(to bottom, black, grey);
     border-radius: 10px;
     border:3px white solid;
     display: flex;
@@ -25,10 +28,6 @@
     
 }
 
-.home_title h1{
-    -webkit-text-stroke: 0.5px;
-    -webkit-text-stroke-color: black;
-}
 
 .home_title p{
     display: flex;
@@ -49,7 +48,7 @@
     font-size: 10px;
     border:3px white solid;
     border-radius: 10px;
-    background: linear-gradient(to bottom, magenta, orange);
+    background: linear-gradient(to bottom, black, grey);
     padding: 5px;
 }
 
