--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: linear-gradient(to bottom,blue,cyan);
+    background: linear-gradient(to bottom,magenta,yellow);
     font-family: pressStart;
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
+    
 }
 
 .links{
@@ -13,15 +14,18 @@
 }
 
 .selected{
-    padding: 30px 20px 30px 20px;
+    padding: 30px 20px 25px 20px;
     border-radius: 10px 0px 10px 0px;
-    background:linear-gradient(to bottom,  yellow,lime);
+    background:linear-gradient(to bottom,  rgb(255, 0, 128),orange);
 }
 
 .links a{
     text-decoration: none;
     margin-left: 20px;
     color: white;
+    
+    -webkit-text-stroke: 0.3px;
+    -webkit-text-stroke-color: black;
 }
 
 .buscador{
@@ -37,13 +41,19 @@
 }
 
 .buscador a button{
-    background:linear-gradient(to bottom,  midnightblue,blue);
-    color: white;
+    background-color: black;
+    border: 2px lime solid;
+    color: lime;
     height: 30px;
     margin-left: 10px;
     border-radius: 10px;
     font-family: fontTwo;
     font-size: 20px;
+}
+
+.buscador a button:disabled{
+    background-color: grey;
+    color: aqua;
 }
 
 @media screen and (max-width:400px) {
