--- a/client/src/components/styles/VideogameCreate.css
+++ b/client/src/components/styles/VideogameCreate.css
@@ -53,9 +53,10 @@
 }
 
 .create_lists label{
-    padding: 10px;
+    padding: 1px 10px 0px 10px ;
     border-radius: 10px;
-    background-color: lime;
+    background:linear-gradient(to bottom, black, grey);
+    border: 2px magenta solid;
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -65,6 +66,12 @@
     background-color: red;
     color: white;
     border-radius: 0px 10px 10px 0px;
+}
+
+.created{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .create_button{
@@ -77,9 +84,10 @@
 .create_message{
     color: lime;
     display: flex;
-    align-self: flex-start;
-    font-size: 40px;
+    font-size: 30px;
 }
+
+
 
 @media screen and (max-width:400px) {
     .create{
@@ -99,4 +107,6 @@
     .create_errors{
         border-radius: 0px 0px 10px 10px;
     }
+
+    
 }
