--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -13,10 +13,8 @@
     padding: 10px;
 }
 
-.selected{
-    padding: 30px 20px 25px 20px;
-    border-radius: 10px 0px 10px 0px;
-    background:linear-gradient(to bottom,  rgb(255, 0, 128),orange);
+.links label{
+    color: white;
 }
 
 .links a{
@@ -26,6 +24,12 @@
     
     -webkit-text-stroke: 0.3px;
     -webkit-text-stroke-color: black;
+}
+
+.selected{
+    padding: 30px 20px 25px 20px;
+    border-radius: 10px 0px 10px 0px;
+    background:linear-gradient(to bottom,  rgb(255, 0, 128),orange);
 }
 
 .buscador{
@@ -41,9 +45,9 @@
 }
 
 .buscador a button{
-    background-color: black;
-    border: 2px lime solid;
-    color: lime;
+    background:linear-gradient(to bottom,black,grey);
+    border: 2px white solid;
+    color: white;
     height: 30px;
     margin-left: 10px;
     border-radius: 10px;
@@ -52,7 +56,7 @@
 }
 
 .buscador a button:disabled{
-    background-color: grey;
+    background:linear-gradient(to bottom, grey,grey);
     color: aqua;
 }
 
