--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  background-color: #480B7B;
+  margin: 0%;
+        box-sizing: border-box;
+        background-image: url(../src/img/background.jpg);
+        background-repeat: repeat;
+        overflow: hidden;
 }
 
 code {
