--- a/client/src/components/styles/About.css
+++ b/client/src/components/styles/About.css
@@ -2,10 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 50px 60px 60px 60px;
-    background-image: url(../../img/background.jpg);
-    max-width: 100%;
-    min-height:100%;
-    background-color: #480B7B;
+    
     color: white;
     font-family: pressStart;
     font-size: 25px;
@@ -33,6 +30,10 @@
 }
 
 @media screen and (max-width:500px) {
+    .about{
+        padding: 10px;
+    }
+
     .about h2{
         font-size: 20px;
     }
